// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with data prop 1`] = `
.c7 {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
}

.c8 {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

.c3 {
  position: relative;
  display: inline;
  color: #000000;
  font-weight: normal;
}

.c3:hover,
.c3:focus {
  color: #000000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c23 {
  display: inline-block;
  color: #FFFFFF;
  fill: currentColor;
}

.c22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.65,-0.19,0.37,1.16);
  -webkit-transition: transform 0.3s cubic-bezier(0.65,-0.19,0.37,1.16);
  transition: transform 0.3s cubic-bezier(0.65,-0.19,0.37,1.16);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

.c20 {
  width: 32px;
  height: 32px;
  border-radius: 50%;
  background: #E52630;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: hidden;
}

.c18 {
  padding-left: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  width: 100%;
  overflow: hidden;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background: transparent;
  border-radius: 1rem 1rem 0 0;
}

.c6 img {
  width: 100%;
  height: auto;
  object-fit: cover;
  display: block;
}

.c15 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
  color: #E52630;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: inline-block;
}

.c17 {
  height: 4px;
  width: 100%;
  position: absolute;
  left: 0;
  bottom: -5px;
  -webkit-transition: opacity 0.15s 0.1s;
  transition: opacity 0.15s 0.1s;
  opacity: 0;
  pointer-events: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  background: transparent;
  border-radius: 1rem;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  cursor: pointer;
  box-sizing: border-box;
}

.c4 img {
  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.65,-0.19,0.37,1.16);
  -webkit-transition: transform 0.3s cubic-bezier(0.65,-0.19,0.37,1.16);
  transition: transform 0.3s cubic-bezier(0.65,-0.19,0.37,1.16);
}

.c2 {
  width: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 100%;
  max-width: 100%;
}

.c9 {
  width: 100%;
  background: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-height: 0;
  border-radius: 0 0 1rem 1rem;
}

.c10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
}

.c11 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-size: 14px;
  color: #969598;
  margin-bottom: 14px;
}

.c13 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: auto;
  padding-top: 2rem;
}

.c0 {
  padding-top: 1rem;
  padding-bottom: 2rem;
  padding-inline: 1rem;
  width: 100%;
  background: transparent;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 1152px;
  margin: 0 auto;
}

.c12 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c12 span {
  font-size: inherit;
  line-height: inherit;
}

@media (min-width:1024px) {
  .c20 {
    background: #222222;
  }
}

@media (min-width:740px) {
  .c6 {
    width: calc(100% / 3);
    min-width: 292px;
    max-width: 309px;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    height: 100%;
    border-radius: 1rem 0 0 1rem;
  }
}

@media (min-width:1024px) {
  .c6 {
    min-width: 355px;
    max-width: 362px;
  }
}

@media (min-width:1440px) {
  .c6 {
    min-width: 363px;
    max-width: 363px;
  }
}

@media (min-width:740px) {
  .c6 img {
    height: 100%;
    object-fit: cover;
  }
}

@media (min-width:740px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c15 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:1024px) {
  .c15 {
    color: #222222;
  }
}

@media (min-width:740px) {
  .c4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    min-height: calc(219px - 4rem);
  }
}

@media (min-width:1024px) {
  .c4 {
    min-height: 272px;
  }
}

@media (min-width:740px) {
  .c4 {
    -webkit-transition: -webkit-transform 0.30000000000000004s cubic-bezier(0.68,-0.8500000000000001,0.265,1.9500000000000002);
    -webkit-transition: transform 0.30000000000000004s cubic-bezier(0.68,-0.8500000000000001,0.265,1.9500000000000002);
    transition: transform 0.30000000000000004s cubic-bezier(0.68,-0.8500000000000001,0.265,1.9500000000000002);
    -webkit-transform-origin: center;
    -ms-transform-origin: center;
    transform-origin: center;
    -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
    -webkit-transition: transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
    transition: transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
  }

  .c4:hover,
  .c4:focus {
    -webkit-transform: translateY(-10px);
    -ms-transform: translateY(-10px);
    transform: translateY(-10px);
  }

  .c4:hover {
    box-shadow: rgba(0,0,0,0.25) 0px 0px 1rem;
  }

  .c4:hover .c5 img {
    -webkit-transform: scale(1.06);
    -ms-transform: scale(1.06);
    transform: scale(1.06);
  }

  .c4:hover .c14 {
    -webkit-text-decoration: none;
    text-decoration: none;
  }

  .c4:hover .c16 {
    opacity: 1;
  }

  .c4:hover .c19 .c21 {
    -webkit-transform: scale(1.2);
    -ms-transform: scale(1.2);
    transform: scale(1.2);
  }
}

@media (min-width:740px) {
  .c2 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    height: auto;
  }
}

@media (min-width:1440px) {
  .c2 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    height: auto;
  }
}

@media (min-width:740px) {
  .c9 {
    width: calc(200% / 3);
    min-width: 384px;
    max-width: 650px;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    border-radius: 0 1rem 1rem 0;
  }
}

@media (min-width:1024px) {
  .c9 {
    min-width: 541px;
    max-width: 790px;
  }
}

@media (min-width:1440px) {
  .c9 {
    width: 789px;
  }
}

@media (min-width:740px) {
  .c0 {
    padding-inline: 2rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding-inline: 4rem;
  }
}

@media (min-width:740px) {
  .c12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c12 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <a
        className="c3 c4"
        href="/test"
        rel={null}
        target="_self"
        type="standard"
      >
        <div
          className="c5 c6"
        >
          <div
            className="c7 lazyload"
            height="100%"
            width="100%"
          >
            <img
              alt="Example image"
              className="c8 lazyload"
              data-lowsrc="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDAAYEBQYFBAYGBQYHBwYIChAKCgkJChQODwwQFxQYGBcUFhYaHSUfGhsjHBYWICwgIyYnKSopGR8tMC0oMCUoKSj/2wBDAQcHBwoIChMKChMoGhYaKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCj/wAARCAAPABQDASIAAhEBAxEB/8QAGAAAAwEBAAAAAAAAAAAAAAAAAAcIBAb/xAAjEAACAgIBBAIDAAAAAAAAAAABAgMEABEGBRIhMQdBE1Fh/8QAFQEBAQAAAAAAAAAAAAAAAAAAAgT/xAAaEQADAQADAAAAAAAAAAAAAAAAAQIDERIT/9oADAMBAAIRAxEAPwBzRcrjVY+0tonyT41nG8y+SLFTkgpQTVFpoqiRZGHc2/egf4RrMM12OHpNi3LsrAjO2vsKCcQtvkbTW570sMUt6xphJKnd+Ma9A78ZRWcS+SWNLpNMqAdQidVaSxErEA6ZgCNj9YZNPTOTpJW7+ovdlnLHyjgAD6GGPug+bP/Z"
              data-sizes="auto"
              data-src="https://images.ctfassets.net/zsfivwzfgl3t/4VsIykPLHDNkNCT9djGrX/c8f1e4cb5c6bda5a7b77f18501e9304d/challenge-1.jpg?w=678&h=501&fl=progressive&q=80&fm=jpg"
              data-srcset="https://images.ctfassets.net/zsfivwzfgl3t/4VsIykPLHDNkNCT9djGrX/c8f1e4cb5c6bda5a7b77f18501e9304d/challenge-1.jpg?w=678&h=501&q=80&fm=webp 678w"
              height="100%"
              src="https://images.ctfassets.net/zsfivwzfgl3t/4VsIykPLHDNkNCT9djGrX/c8f1e4cb5c6bda5a7b77f18501e9304d/challenge-1.jpg?w=678&h=501&fl=progressive&q=80&fm=jpg"
              srcSet="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              width="100%"
            />
          </div>
        </div>
        <div
          className="c9"
        >
          <div
            className="c10"
          >
            <div
              className="c11"
            >
              Example Label
            </div>
            <p
              className="c12"
            >
              <strong>
                Single Card
              </strong>
               content here
            </p>
          </div>
          <div
            className="c13"
          >
            <span
              className="c14 c15"
            >
              Learn more
              <img
                alt=""
                aria-hidden="true"
                className="c16 c17"
                src="mock.asset"
              />
            </span>
            <div
              className="c18"
            >
              <div
                className="c19 c20"
              >
                <span
                  className="c21 c22"
                >
                  <svg
                    className="c23"
                    fill="none"
                    height="15"
                    viewBox="0 0 15 15"
                    width="15"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.58496 1.3501C9.1395 0.88346 8.40641 0.883488 7.96094 1.3501C7.52803 1.80361 7.5281 2.53033 7.96094 2.98389L11.1582 6.3335H1.13672C0.48748 6.3335 0 6.87834 0 7.50049C2.15408e-05 8.12262 0.487494 8.66748 1.13672 8.66748H11.1582L7.96094 12.0171C7.52806 12.4706 7.52899 13.1974 7.96191 13.6509C8.18163 13.8804 8.47556 14.0005 8.77344 14.0005C9.07114 14.0004 9.36533 13.8809 9.58496 13.6509L14.6758 8.31689L14.6748 8.31592L14.6875 8.30322L14.6865 8.30225C14.6954 8.29227 14.7044 8.28494 14.71 8.27783C14.7117 8.27557 14.7133 8.27298 14.7148 8.271C14.7485 8.23215 14.7824 8.18937 14.8135 8.14111L14.8154 8.13818C14.8354 8.1067 14.8493 8.07854 14.8564 8.06396L14.8652 8.04639L14.8662 8.04443L14.8672 8.04346C14.8672 8.04346 14.868 8.0407 14.8691 8.03857C14.8709 8.03524 14.8758 8.02683 14.8799 8.01904L14.8802 8.01851C14.8888 8.00212 14.9034 7.97435 14.917 7.93994V7.93799C14.9303 7.90387 14.9391 7.87297 14.9443 7.854C14.9469 7.8447 14.9498 7.83579 14.9512 7.83057C14.9527 7.82466 14.9535 7.82292 14.9541 7.8208C14.9541 7.8208 14.9542 7.81765 14.9551 7.81494L14.958 7.80615L14.9586 7.80434C14.9631 7.78973 14.9718 7.76131 14.9785 7.72705V7.7251C15.0066 7.57717 15.0066 7.42472 14.9785 7.27686V7.2749L14.958 7.1958L14.9551 7.18604L14.9531 7.18018L14.9512 7.17236C14.9497 7.16652 14.9481 7.15689 14.9453 7.14697C14.9398 7.12707 14.9307 7.09666 14.917 7.06201C14.9032 7.027 14.8885 6.99825 14.8799 6.98193C14.8758 6.97415 14.8709 6.96574 14.8691 6.9624L14.8564 6.93701C14.849 6.92189 14.8351 6.89384 14.8154 6.86279L14.8145 6.86084L14.7529 6.77393C14.7316 6.74671 14.7094 6.72141 14.6875 6.69775C14.6837 6.69353 14.6802 6.68867 14.6758 6.68408L9.58496 1.3501Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`renders correctly without image 1`] = `
.c3 {
  position: relative;
  display: inline;
  color: #000000;
  font-weight: normal;
}

.c3:hover,
.c3:focus {
  color: #000000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c19 {
  display: inline-block;
  color: #FFFFFF;
  fill: currentColor;
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.65,-0.19,0.37,1.16);
  -webkit-transition: transform 0.3s cubic-bezier(0.65,-0.19,0.37,1.16);
  transition: transform 0.3s cubic-bezier(0.65,-0.19,0.37,1.16);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

.c16 {
  width: 32px;
  height: 32px;
  border-radius: 50%;
  background: #E52630;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: hidden;
}

.c14 {
  padding-left: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c11 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
  color: #E52630;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: inline-block;
}

.c13 {
  height: 4px;
  width: 100%;
  position: absolute;
  left: 0;
  bottom: -5px;
  -webkit-transition: opacity 0.15s 0.1s;
  transition: opacity 0.15s 0.1s;
  opacity: 0;
  pointer-events: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  background: transparent;
  border-radius: 1rem;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  cursor: pointer;
  box-sizing: border-box;
}

.c4 img {
  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.65,-0.19,0.37,1.16);
  -webkit-transition: transform 0.3s cubic-bezier(0.65,-0.19,0.37,1.16);
  transition: transform 0.3s cubic-bezier(0.65,-0.19,0.37,1.16);
}

.c2 {
  width: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 100%;
  max-width: 100%;
}

.c5 {
  width: 100%;
  background: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-height: 0;
  border-radius: 0 0 1rem 1rem;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
}

.c7 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-size: 14px;
  color: #969598;
  margin-bottom: 14px;
}

.c9 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: auto;
  padding-top: 2rem;
}

.c0 {
  padding-top: 1rem;
  padding-bottom: 2rem;
  padding-inline: 1rem;
  width: 100%;
  background: transparent;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 1152px;
  margin: 0 auto;
}

.c8 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c8 span {
  font-size: inherit;
  line-height: inherit;
}

@media (min-width:1024px) {
  .c16 {
    background: #222222;
  }
}

@media (min-width:740px) {
  .c11 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c11 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:1024px) {
  .c11 {
    color: #222222;
  }
}

@media (min-width:740px) {
  .c4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    min-height: calc(219px - 4rem);
  }
}

@media (min-width:1024px) {
  .c4 {
    min-height: 272px;
  }
}

@media (min-width:740px) {
  .c4 {
    -webkit-transition: -webkit-transform 0.30000000000000004s cubic-bezier(0.68,-0.8500000000000001,0.265,1.9500000000000002);
    -webkit-transition: transform 0.30000000000000004s cubic-bezier(0.68,-0.8500000000000001,0.265,1.9500000000000002);
    transition: transform 0.30000000000000004s cubic-bezier(0.68,-0.8500000000000001,0.265,1.9500000000000002);
    -webkit-transform-origin: center;
    -ms-transform-origin: center;
    transform-origin: center;
    -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
    -webkit-transition: transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
    transition: transform 0.4s cubic-bezier(0.68,-1.15,0.265,2.35);
  }

  .c4:hover,
  .c4:focus {
    -webkit-transform: translateY(-10px);
    -ms-transform: translateY(-10px);
    transform: translateY(-10px);
  }

  .c4:hover {
    box-shadow: rgba(0,0,0,0.25) 0px 0px 1rem;
  }

  .c4:hover .c10 {
    -webkit-text-decoration: none;
    text-decoration: none;
  }

  .c4:hover .c12 {
    opacity: 1;
  }

  .c4:hover .c15 .c17 {
    -webkit-transform: scale(1.2);
    -ms-transform: scale(1.2);
    transform: scale(1.2);
  }
}

@media (min-width:740px) {
  .c2 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    height: auto;
  }
}

@media (min-width:1440px) {
  .c2 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    height: auto;
  }
}

@media (min-width:740px) {
  .c5 {
    width: calc(200% / 3);
    min-width: 384px;
    max-width: 650px;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    border-radius: 0 1rem 1rem 0;
  }
}

@media (min-width:1024px) {
  .c5 {
    min-width: 541px;
    max-width: 790px;
  }
}

@media (min-width:1440px) {
  .c5 {
    width: 789px;
  }
}

@media (min-width:740px) {
  .c0 {
    padding-inline: 2rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding-inline: 4rem;
  }
}

@media (min-width:740px) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:1024px) {
  .c8 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <a
        className="c3 c4"
        href="/test-no-image"
        rel={null}
        target="_self"
        type="standard"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              className="c7"
            >
              Example Label
            </div>
            <p
              className="c8"
            >
              Card without image
            </p>
          </div>
          <div
            className="c9"
          >
            <span
              className="c10 c11"
            >
              View card
              <img
                alt=""
                aria-hidden="true"
                className="c12 c13"
                src="mock.asset"
              />
            </span>
            <div
              className="c14"
            >
              <div
                className="c15 c16"
              >
                <span
                  className="c17 c18"
                >
                  <svg
                    className="c19"
                    fill="none"
                    height="15"
                    viewBox="0 0 15 15"
                    width="15"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.58496 1.3501C9.1395 0.88346 8.40641 0.883488 7.96094 1.3501C7.52803 1.80361 7.5281 2.53033 7.96094 2.98389L11.1582 6.3335H1.13672C0.48748 6.3335 0 6.87834 0 7.50049C2.15408e-05 8.12262 0.487494 8.66748 1.13672 8.66748H11.1582L7.96094 12.0171C7.52806 12.4706 7.52899 13.1974 7.96191 13.6509C8.18163 13.8804 8.47556 14.0005 8.77344 14.0005C9.07114 14.0004 9.36533 13.8809 9.58496 13.6509L14.6758 8.31689L14.6748 8.31592L14.6875 8.30322L14.6865 8.30225C14.6954 8.29227 14.7044 8.28494 14.71 8.27783C14.7117 8.27557 14.7133 8.27298 14.7148 8.271C14.7485 8.23215 14.7824 8.18937 14.8135 8.14111L14.8154 8.13818C14.8354 8.1067 14.8493 8.07854 14.8564 8.06396L14.8652 8.04639L14.8662 8.04443L14.8672 8.04346C14.8672 8.04346 14.868 8.0407 14.8691 8.03857C14.8709 8.03524 14.8758 8.02683 14.8799 8.01904L14.8802 8.01851C14.8888 8.00212 14.9034 7.97435 14.917 7.93994V7.93799C14.9303 7.90387 14.9391 7.87297 14.9443 7.854C14.9469 7.8447 14.9498 7.83579 14.9512 7.83057C14.9527 7.82466 14.9535 7.82292 14.9541 7.8208C14.9541 7.8208 14.9542 7.81765 14.9551 7.81494L14.958 7.80615L14.9586 7.80434C14.9631 7.78973 14.9718 7.76131 14.9785 7.72705V7.7251C15.0066 7.57717 15.0066 7.42472 14.9785 7.27686V7.2749L14.958 7.1958L14.9551 7.18604L14.9531 7.18018L14.9512 7.17236C14.9497 7.16652 14.9481 7.15689 14.9453 7.14697C14.9398 7.12707 14.9307 7.09666 14.917 7.06201C14.9032 7.027 14.8885 6.99825 14.8799 6.98193C14.8758 6.97415 14.8709 6.96574 14.8691 6.9624L14.8564 6.93701C14.849 6.92189 14.8351 6.89384 14.8154 6.86279L14.8145 6.86084L14.7529 6.77393C14.7316 6.74671 14.7094 6.72141 14.6875 6.69775C14.6837 6.69353 14.6802 6.68867 14.6758 6.68408L9.58496 1.3501Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
